Profile Page Integeration

--- a/mom/templates/partial/sidebar.html
+++ b/mom/templates/partial/sidebar.html
@@ -59,12 +59,18 @@
                         <!-- User picture-->
                         <div class="user-block-picture">
                            <div class="user-block-status"><img class="img-thumbnail rounded-circle"
-                                 src="{% static 'img/user/02.jpg' %}" alt="Avatar" width="60" height="60">
+                                 src="{{ user.profile.profile.url }}" alt="Avatar" width="60" height="60">
                               <div class="circle bg-success circle-lg"></div>
                            </div>
                         </div><!-- Name and Job-->
-                        <div class="user-block-info"><span class="user-block-name">Hello, Mike</span><span
-                              class="user-block-role">Designer</span></div>
+                        <div class="user-block-info"><span class="user-block-name">Hello, {{ user.first_name|title }}</span><span
+                              class="user-block-role">
+                           {% if user.profile.designation %}
+                              {{ user.profile.designation }}
+                           {% else %}
+                              Designation Not Found
+                           {% endif %}
+                           </span></div>
                      </div>
                   </div>
                </li><!-- END user info-->
