--- a/mom/templates/useractivity/myprofile.html
+++ b/mom/templates/useractivity/myprofile.html
@@ -5,26 +5,63 @@
    <!-- Page content-->
    <div class="content-wrapper">
       <div class="content-heading">
-         <div >Personal Settings</div>
-               
+         <div>Personal Settings</div>
       </div>
       <div class="row">
-         
+         <div class="col-md-6 offset-md-2">
+            {% include 'partial/messages.html' %}
+         </div>
+      </div>
+      <div class="row">
+
          <div class="col-lg-4">
             <div class="card card-default">
                <div class="card-body text-center">
-                  <div class="py-4"><img class="img-fluid rounded-circle img-thumbnail thumb96" src="{% static 'img/user/02.jpg' %}" alt="Contact"></div>
-                  <h3 class="m-0 text-bold">Audrey Hunt</h3>
-                  <div class="my-3">
-                     <p>Hello, I'm a just a dummy contact in your contact list and this is my presentation text. Have fun!</p>
+                  <div class="py-4"><img class="img-fluid rounded-circle img-thumbnail thumb96"
+                        src="{{ user.profile.profile.url }}" alt="Profile Pic" id="profile_pic"></div>
+                  <div class=" doltext-center">
+                     <form action="" method="POST" id="image_upload_form" name="image_upload_form">
+                        {% csrf_token %}
+                        <div class="form-group">
+                           <input class="form-control filestyle" type="file" onchange="this.FormData" accept="image/*"
+                              data-classbutton="btn btn-secondary" data-classinput="form-control inline"
+                              data-text="Upload new picture" data-icon="<span class='fa fa-upload mr-2'></span>"
+                              id="filestyle-0" style="position: absolute; clip: rect(0px, 0px, 0px, 0px);"
+                              tabindex="-1">
+                           <div class=" input-group">
+                              <span class="group-span-filestyle text-center" style="width:100%;" tabindex="0">
+                                 <label for="filestyle-0" style="margin-bottom: 0;" class="btn btn-secondary ">
+                                    <span class="fa fa-upload mr-2"></span>
+                                    <span class="buttonText">Upload picture</span>
+                                 </label>
+                              </span>
+                           </div>
+                        </div>
+                     </form>
                   </div>
-                  <!-- <div class="text-center"><a class="btn btn-primary" href="#">Send message</a></div> -->
+                  <h3 class="m-0 text-bold">{{ user.first_name|title }} {{user.last_name|title }}</h3>
+                  <div class="my-3">
+                     <p>
+                        {% if user.profile.bio %}
+                        {{ user.profile.bio }}
+                        {% else %}
+                        Bio Not Found
+                        {% endif %}
+                     </p>
+                  </div>
                </div>
             </div>
             <div class="card b">
                <div class="list-group">
-                  <a class="list-group-item list-group-item-action active" href="#tabSetting1" data-toggle="tab">Profile</a>
-                  <a class="list-group-item list-group-item-action" href="#tabSetting2" data-toggle="tab">Change Password</a>
+                  <a class="list-group-item list-group-item-action active" href="#profiletab"
+                     data-toggle="tab">Profile</a>
+                  <a class="list-group-item list-group-item-action" href="#passwordtab" data-toggle="tab">Change
+                     Password</a>
+                  {% if passwordtab %} 
+                     <script> 
+                        window.location.href = '#{{ passwordtab }}';                        
+                     </script>
+                  {% endif %}
                   <!-- <a class="list-group-item list-group-item-action" href="#tabSetting3" data-toggle="tab">Emails</a> -->
                   <!-- <a class="list-group-item list-group-item-action" href="#tabSetting4" data-toggle="tab">Notifications</a> -->
                   <!-- <a class="list-group-item list-group-item-action" href="#tabSetting5" data-toggle="tab">Applications</a> -->
@@ -33,50 +70,73 @@
          </div>
          <div class="col-lg-8">
             <div class="tab-content p-0 b0">
-               <div class="tab-pane active" id="tabSetting1">
+               <div class="tab-pane active" id="profiletab">
                   <div class="card b">
                      <div class="card-header bg-gray-lighter text-bold">Profile</div>
                      <div class="card-body">
-                        <form action="#">
-                           <div class="form-group"><label>Picture</label><input class="form-control filestyle" type="file" data-input="false" data-classbutton="btn btn-secondary" data-classinput="form-control inline" data-text="Upload new picture" data-icon="<span class='fa fa-upload mr-2'></span>" id="filestyle-0" style="position: absolute; clip: rect(0px, 0px, 0px, 0px);" tabindex="-1"><div class="bootstrap-filestyle input-group"><div name="filedrag" style="position: absolute; width: 100%; height: 35.4px; z-index: -1;"></div><span class="group-span-filestyle " tabindex="0"><label for="filestyle-0" style="margin-bottom: 0;" class="btn btn-secondary "><span class="fa fa-upload mr-2"></span><span class="buttonText">Upload new picture</span></label></span></div></div>
-                           <div class="form-group"><label>Name</label><input class="form-control" type="text"></div>
-                           <div class="form-group"><label>Bio</label><textarea class="form-control" rows="3"></textarea></div>
-                           <div class="form-group"><label>URL</label><input class="form-control" type="text"></div>
-                           <div class="form-group"><label>Company</label><input class="form-control" type="text"></div>
-                           <div class="form-group"><label>Location</label><input class="form-control" type="text"></div><button class="btn btn-info" type="button">Update settings</button>
-                           <p><small class="text-muted">* Integer fermentum accumsan metus, id sagittis ipsum molestie vitae</small></p>
+
+
+                        <form action="{% url 'useractivity:profile'%}" method="POST">
+                           {% csrf_token %}
+                           {% for field in form %}
+                           <div class="form-group">{{field.label}}
+                              <div class="input-group with-focus">
+                                 <!-- <div class="input-group-append"> -->
+                                 {{field}}
+                                 {% if field.errors %}
+                                 <div class="text text-danger">
+                                    {{field.errors }}
+                                 </div>
+                                 {% endif %}
+                                 <!-- </div> -->
+                              </div>
+                           </div>
+                           {% endfor %}
+                           <button class="btn btn-info" type="submit">Update settings</button>
                         </form>
                      </div>
                   </div>
                   <div class="card b">
                      <div class="card-header bg-danger text-bold">Delete account</div>
                      <div class="card-body bt">
-                        <p>You will be asked for confirmation before delete account.</p><button class="btn btn-secondary" type="button"><span class="text-danger">Delete account</span></button>
+                        <p>You will be asked for confirmation before delete account.</p><button
+                           class="btn btn-secondary" type="button"><span class="text-danger">Delete
+                              account</span></button>
                      </div>
                   </div>
                </div>
-               <div class="tab-pane" id="tabSetting2">
+               <div class="tab-pane" id="passwordtab">
                   <div class="card b">
                      <div class="card-header bg-gray-lighter text-bold">Change Password</div>
                      <div class="card-body">
-                        <form action="#">
-                           <div class="form-group"><label>Current password</label><input class="form-control" type="password"></div>
-                           <div class="form-group"><label>New password</label><input class="form-control" type="password"></div>
-                           <div class="form-group"><label>Confirm new password</label><input class="form-control" type="password"></div><button class="btn btn-info" type="button">Update password</button>
-                           <p><small class="text-muted">* Integer fermentum accumsan metus, id sagittis ipsum molestie vitae</small></p>
+                        <form action="{% url 'useractivity:change_password' %}" method="POST">
+                           {% csrf_token %}
+                           {% for field in passwordform %}
+                           <div class="form-group">{{field.label}}
+                              {{field}}
+                           </div>
+                           {% endfor %}
+                           <button class="btn btn-info" type="submit">Update
+                              password</button>
+                           <p><small class="text-muted">* Integer fermentum accumsan metus, id sagittis ipsum molestie
+                                 vitae</small></p>
                         </form>
                      </div>
                   </div>
-                  
+
                </div>
-               
+
             </div>
          </div>
       </div>
    </div>
 </section><!-- Page footer-->
-   
+
 {% endblock body %}
 
-   
-   
+
+{% block script %}
+
+<script src="{% static 'js/profile_upload.js' %}"></script>
+
+{% endblock script %}
