--- a/mom/templates/useractivity/login.html
+++ b/mom/templates/useractivity/login.html
@@ -8,7 +8,7 @@
    <meta name="description" content="Bootstrap Admin App">
    <meta name="keywords" content="app, responsive, jquery, bootstrap, dashboard, admin">
    <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
-   <title>MOM | Login  </title><!-- =============== VENDOR STYLES ===============-->
+   <title>MOM | Login </title><!-- =============== VENDOR STYLES ===============-->
    <!-- FONT AWESOME-->
    <link rel="stylesheet" href="{% static 'vendor/@fortawesome/fontawesome-free/css/brands.css' %}">
    <link rel="stylesheet" href="{% static 'vendor/@fortawesome/fontawesome-free/css/regular.css' %}">
@@ -19,32 +19,34 @@
    <link rel="stylesheet" href="{% static 'css/app.css' %}" id="maincss' %}">
    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
+
 <body>
    <div class="wrapper">
       <div class="block-center mt-4 wd-xl">
          <!-- START card-->
          <div class="card card-flat">
-            <div class="card-header text-center bg-info"><a href="#"><img class="block-center rounded" src="{% static 'img/logo-mom.png' %}" alt="Image"></a></div>
+            <div class="card-header text-center bg-info"><a href="#"><img class="block-center rounded"
+                     src="{% static 'img/logo-mom.png' %}" alt="Image"></a></div>
             <div class="card-body">
-               {% include 'partial/messages.html' %}  
+               {% include 'partial/messages.html' %}
                <p class="text-center py-2">SIGN IN TO CONTINUE.</p>
                <form class="mb-3" id="loginForm" method="POST" action="{% url 'useractivity:login' %}">
                   {% csrf_token %}
                   {% for field in form %}
-                     <div class="form-group">{{field.label}}
-                        <div class="input-group with-focus">
-                           <!-- <div class="input-group-append"> -->
-                              {{field}}
-                              {% if field.errors %}
-                                 <div class="text text-danger">
-                                    {{field.errors }}
-                                 </div>
-                              {% endif %}                              
-                           <!-- </div> -->
+                  <div class="form-group">{{field.label}}
+                     <div class="input-group with-focus">
+                        <!-- <div class="input-group-append"> -->
+                        {{field}}
+                        {% if field.errors %}
+                        <div class="text text-danger">
+                           {{field.errors }}
                         </div>
+                        {% endif %}
+                        <!-- </div> -->
                      </div>
+                  </div>
                   {% endfor %}
-                  <input type="submit" class="btn btn-block btn-primary" value="login"/>
+                  <input type="submit" class="btn btn-block btn-primary" value="login" />
                </form>
                <p class="pt-3 text-center">Need to Signup?</p>
                <a class="btn btn-block btn-secondary" href="{% url 'useractivity:registration' %}">Register Now</a>
@@ -61,8 +63,13 @@
    <script src="{% static 'vendor/jquery/dist/jquery.js' %}"></script><!-- BOOTSTRAP-->
    <script src="{% static 'vendor/popper.js/dist/umd/popper.js' %}"></script>
    <script src="{% static 'vendor/bootstrap/dist/js/bootstrap.js' %}"></script><!-- PARSLEY-->
-   <script src="{% static 'vendor/parsleyjs/dist/parsley.js' %}"></script><!-- =============== APP SCRIPTS ===============-->
+   <script src="{% static 'vendor/parsleyjs/dist/parsley.js' %}"></script>
+   <!-- =============== APP SCRIPTS ===============-->
    <script src="{% static 'js/app.js' %}"></script>
+
+
+   
+
 </body>
 
 </html>
