--- a/mom/templates/base.html
+++ b/mom/templates/base.html
@@ -41,7 +41,7 @@
 
    {% endblock body %}
 
-   <footer class="footer-container"><span>&copy; 2019 - Angle</span></footer>
+   <footer class="footer-container"><span>&copy; 2020 - M-0-M</span></footer>
    </div>
    <!-- =============== VENDOR SCRIPTS ===============-->
    <!-- MODERNIZR-->
@@ -55,13 +55,13 @@
    <script src="{% static 'vendor/bootstrap/dist/js/bootstrap.js' %}"></script>
    
    {% block script %}
-      
+   
    {% endblock script %}
-      
+   <script src="{% static 'js/app.js' %}"></script>
+   
  
    <!-- =============== PAGE VENDOR SCRIPTS ===============-->
    <!-- =============== APP SCRIPTS ===============-->
-   <script src="{% static 'js/app.js' %}"></script>
 
 </body>
 
