--- a/mom/templates/useractivity/login.html
+++ b/mom/templates/useractivity/login.html
@@ -67,7 +67,38 @@
    <!-- =============== APP SCRIPTS ===============-->
    <script src="{% static 'js/app.js' %}"></script>
 
-
+   
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand"  href="#">Yartsa</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data- target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav ml-auto">
+      <li class="nav-item active">
+      <a class="nav-link" href="#">Home </a>
+      </li>
+      
+      
+        <li class="nav-item dropdown" id="Arquivos">
+          <a class="nav-link dropdown-toggle" href="#"  data-target="#Arquivos" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Projects
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" id="MyArqs">
+            <a class="dropdown-item" href="#">Logistic Regression</a>
+            <a class="dropdown-item" href="#">Misspellings</a>
+      
+          </div>
+           <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+        </ul>
+       </div>
+      </nav>
    
 
 </body>
