Textarea of meeting

--- a/mom/static/css/style.css
+++ b/mom/static/css/style.css
@@ -11,8 +11,8 @@
     margin: auto; 
 }
 
-/** meetingtext css **/
 
+/** meetingprimarytext css **/
 .showbtn {
     display: none;
     position: fixed;
@@ -24,9 +24,31 @@
 
     animation: 3s ease 5s 9 normal none running cubic-bezier;
   }
-
-.list-group-item{
+.note-li{
     margin-top: 10px !important;
     border-radius: 10px  !important;
-} 
+
+}
+
+#edit-meeting-btn-div
+{
+    width: 95%;
+    top: 9px;
+    position: absolute;
+    text-align: right;
+}
+#meeting-textarea   {
+    resize: none;
+    overflow: hidden;
+    
+}
+#meetingtext
+{
+    font-weight: 200;
+    background: #f7f8f9;
+    padding: 17px;
+    border: 1px solid #d8c8c8;
+    border-radius: 5px;
+    box-shadow: 0 0 3px 0px;
+}
 /** end meeting text css **/
