--- a/mom/templates/meeting/meetingtext.html
+++ b/mom/templates/meeting/meetingtext.html
@@ -13,13 +13,18 @@
           <div class="offset-md-1 col-xl-10 col-md-10 col-xs-10">
              <!-- START card-->
              <div class="card card-default">
-                <div class="card-header"><h4>Meeting All Text<h4><hr/></div>
+                <div class="card-header"><h4>Meeting All Text<h4>
+                  <div id="edit-meeting-btn-div">
+                     <button type="button" id="edit-meeting-btn" class="btn btn-info">Edit</button> 
+                  </div>
+               </div>
+               <hr/>
                 <div class="card-body">
                    <div class="showbtn"><button class="btn btn-primary" onclick="getSelectedText(event)">copy</button></div>
                    <blockquote>
-                      <p>
-                         <span id="meetingtext" class="selectable" onclick="showButton(event)">
-                         </span>
+                      <p id="editablemeetingtext">
+                         <pre id="meetingtext" class="selectable" onclick="showButton(event)" wrap="hard"></pre>
+
                       </p>
                    </blockquote>
                 </div>
@@ -29,7 +34,8 @@
           
        </div><!-- END row-->
        <div class="row">
-           <div class="offset-md-1 col-xl-10 col-md-10 col-xs-10">
+           <div class="offset-md-1 col-xl-10 col-md-6  col-xs-10">
+
             <h3>Notes : </h3>  
              <ul class="list-group sortable" aria-dropeffect="move">
              </ul>
@@ -45,5 +51,6 @@
  </section>{% endblock body %}
  {% block script %}
         <script src="{% static 'vendor/html5sortable/dist/html5sortable.js' %}"></script>
-        <script src="{% static 'js/meetingtext.js' %}"></script>
+        <!-- <script src="{% static 'vendor/x-editable/dist/bootstrap3-editable/js/bootstrap-editable.js' %}"></script> -->
+        <script src="{% static 'js/meetingtext.js'%}"></script>
  {% endblock script %}
