--- a/mom/templates/useractivity/index.html
+++ b/mom/templates/useractivity/index.html
@@ -42,7 +42,7 @@
                             Meeting</button>&nbsp;
                         <button class="btn btn-danger" id='stop' hidden>End Meeting</button></div>
                 </div>
-                <a href="{% url 'meeting:meetingtext'%}">meetingtext</a>
+                <!-- <a href="{% url 'meeting:meetingtext'%}">meetingtext</a> -->
             </div>
         </div>
     </div>
