--- a/mom/templates/registration/password_reset.html
+++ b/mom/templates/registration/password_reset.html
@@ -1,3 +1,9 @@
+<!-- <h2>Reset Password</h2> -->
+<!-- <form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">submit</button>
+</form> -->
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -8,7 +14,7 @@
    <meta name="description" content="Bootstrap Admin App">
    <meta name="keywords" content="app, responsive, jquery, bootstrap, dashboard, admin">
    <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
-   <title>MOM | Login </title><!-- =============== VENDOR STYLES ===============-->
+   <title>MOM | Reset Password </title><!-- =============== VENDOR STYLES ===============-->
    <!-- FONT AWESOME-->
    <link rel="stylesheet" href="{% static 'vendor/@fortawesome/fontawesome-free/css/brands.css' %}">
    <link rel="stylesheet" href="{% static 'vendor/@fortawesome/fontawesome-free/css/regular.css' %}">
@@ -29,8 +35,8 @@
                      src="{% static 'img/logo-mom.png' %}" alt="Image"></a></div>
             <div class="card-body">
                {% include 'partial/messages.html' %}
-               <p class="text-center py-2">SIGN IN TO CONTINUE.</p>
-               <form class="mb-3" id="loginForm" method="POST" action="{% url 'useractivity:login' %}">
+               <p class="text-center py-2">Reset Password</p>
+               <form class="mb-3" method="post">
                   {% csrf_token %}
                   {% for field in form %}
                   <div class="form-group">{{field.label}}
@@ -46,11 +52,8 @@
                      </div>
                   </div>
                   {% endfor %}
-                  <input type="submit" class="btn btn-block btn-primary" value="login" />
+                  <input type="submit" class="btn btn-block btn-primary" value="Send Mail" />
                </form>
-               <a class="pt-3 text-center" href="{% url 'useractivity:password_reset' %}">Forgot Password   </a>
-               <p class="pt-3 text-center">Need to Signup?</p>
-               <a class="btn btn-block btn-secondary" href="{% url 'useractivity:registration' %}">Register Now</a>
             </div>
          </div><!-- END card-->
          <!-- <div class="p-3 text-center"><span class="mr-2">&copy;</span><span>2019</span><span class="mr-2">-</span><span>Angle</span><br><span>Bootstrap Admin Template</span></div> -->
@@ -68,7 +71,6 @@
    <!-- =============== APP SCRIPTS ===============-->
    <script src="{% static 'js/app.js' %}"></script>
 
-   
 </body>
 
 </html>
