--- a/mom/templates/meeting/meetingtext.html
+++ b/mom/templates/meeting/meetingtext.html
@@ -26,7 +26,7 @@
                </div>
                <hr/>
                 <div class="card-body">
-                   <div class="showbtn"><button class="btn btn-primary" type="button" onclick="getSelectedText(event)">copy</button></div>
+                   <div class="showbtn"><button class="btn btn-primary" type="button" onclick="getSelectedText(event)">Add to Notes</button></div>
                    <blockquote>
                       <p id="editablemeetingtext">
                          <pre id="meetingtext" class="selectable" onclick="showButton(event)" wrap="hard">{{meetingdata.meetingtext}}</pre>
